--- a/Resources/DesktopModules/Admin/Dnn.PersonaBar/Modules/Dnn.Pages/App_LocalResources/pages.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Dnn.PersonaBar/Modules/Dnn.Pages/App_LocalResources/pages.nl-NL.resx
@@ -986,8 +986,8 @@
             &lt;tbody&gt;
                 &lt;tr&gt;
                     &lt;td&gt;49&lt;/td&gt;
-                    &lt;td&gt;Site Instellingen&lt;/td&gt;
-                    &lt;td&gt;Site Instellingen&lt;/td&gt;
+                    &lt;td&gt;Site instellingen&lt;/td&gt;
+                    &lt;td&gt;Site instellingen&lt;/td&gt;
                     &lt;td class="bg-info"&gt;43&lt;/td&gt;
                     &lt;td&gt;&lt;/td&gt;
                     &lt;td&gt;//Admin//SiteInstellingen&lt;/td&gt;
