--- a/Resources/App_GlobalResources/Exceptions.nl-NL.resx
+++ b/Resources/App_GlobalResources/Exceptions.nl-NL.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <resheader name="resmimetype">
     <value>text/microsoft-resx</value>
@@ -408,6 +408,4 @@
   <data name="WriteFileToResponsePermissionsNotMet.Text" xml:space="preserve">
     <value>De juiste machtigingen ontbreken. Het bestand kan niet worden gedownload.</value>
   </data>
-
 </root>
-
