--- a/Resources/App_GlobalResources/FileUpload.nl-NL.resx
+++ b/Resources/App_GlobalResources/FileUpload.nl-NL.resx
@@ -13,7 +13,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AlreadyExists.Text" xml:space="preserve">
-    <value>Het bestand bestaat reeds.</value>
+    <value>Het bestand bestaat al.</value>
   </data>
   <data name="ErrorMessage.Text" xml:space="preserve">
     <value>Het bestand '{0}' kon niet worden geüpload: {1}.</value>
