--- a/Resources/App_GlobalResources/SharedResources.nl-NL.resx
+++ b/Resources/App_GlobalResources/SharedResources.nl-NL.resx
@@ -1,4 +1,4 @@
-﻿﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <resheader name="resmimetype">
     <value>text/microsoft-resx</value>
@@ -181,7 +181,7 @@
     <value>Terug</value>
   </data>
   <data name="cmdStop.Text" xml:space="preserve">
-    <value>Stop</value>
+    <value>Stoppen</value>
   </data>
   <data name="cmdUpdate.Text" xml:space="preserve">
     <value>Bijwerken</value>
